// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput should be rendered correctly 1`] = `
<label
  className="container root size-18 color-sky theme-light"
>
  <div
    className="uui-radioinput uui-checked"
  >
    <input
      aria-checked={true}
      checked={true}
      onChange={[Function]}
      type="radio"
    />
    <div
      className="container uui-icon uui-enabled circle"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#radio-point.svg"
        />
      </svg>
    </div>
  </div>
</label>
`;

exports[`RadioInput should be rendered correctly with new props 1`] = `
<label
  className="container root size-12 color-sun theme-dark"
>
  <div
    className="uui-radioinput uui-checked"
  >
    <input
      aria-checked={true}
      checked={true}
      onChange={[Function]}
      type="radio"
    />
    <div
      className="container uui-icon uui-enabled circle"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#radio-point.svg"
        />
      </svg>
    </div>
  </div>
  <div
    className="uui-input-label"
  >
    open
  </div>
</label>
`;
